--- a/Multi-Tenant-Blog/Article.Api.Domain/Article.Api.Domain.csproj
+++ b/Multi-Tenant-Blog/Article.Api.Domain/Article.Api.Domain.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="HotChocolate.Types" Version="12.14.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Domain.Common\Domain.Common.csproj" />
   </ItemGroup>
 
