--- a/Multi-Tenant-Blog/Article.Api/appsettings.json
+++ b/Multi-Tenant-Blog/Article.Api/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     // Sql Database
-    "DefaultConnection": "Server=BPINS042\\MSSQLSERVER2019;Database=CATALOGNAME;User=USER;Password=PASSWORD"
+    "DefaultConnection": "Server=BPINS042\\MSSQLSERVER2019;Database=Blog.Article_DT;User=sa;Password=s@PWD246800!"
   },
   "Logging": {
     "LogLevel": {
