--- a/Multi-Tenant-Blog/Article.Api.GraphQL/Article.Api.GraphQL.csproj
+++ b/Multi-Tenant-Blog/Article.Api.GraphQL/Article.Api.GraphQL.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Article.Api.Business\Article.Api.Business.csproj" />
     <ProjectReference Include="..\Article.Api.Domain\Article.Api.Domain.csproj" />
   </ItemGroup>
 
